<resources>
    <string name="app_name">ThingSeller</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="or">Or</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="text_new_user">New User?</string>
    <string name="here">Now</string>
    <string name="text_footer">By creating an account, you agree to our \nTerms of Service and Privacy Policy</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Register</string>
    <string name="please_enter_valid_email">Please enter valid email address</string>
    <string name="please_enter_password">Password must contains at least 4 characters</string>
    <string name="Register_Now">Register Now</string>
    <string name="username">Username</string>
    <string name="email_id">Email Id</string>
    <string name="phone">phone</string>
    <string name="menu_gallery">gallery</string>
    <string name="menu_home">home</string>
    <string name="menu_slideshow">slideshow</string>
    <string name="action_settings">settings</string>
    <string name="menu_Profile_settings">Profile Settings</string>
    <string name="menu_add_new_product">Add New Product</string>
    <string name="product_name">Product Name</string>
    <string name="description">Description</string>
    <string name="product_model">Product_Model</string>
    <string name="product_model1">Product Model</string>
    <string name="product_price">Product Price</string>
    <string name="menu_profile">Profile</string>
    <string name="action_logout">Log Out</string>
    <string name="menu_coategory">Category</string>
</resources>