<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_add_new_product"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/menu_add_new_product" />
         <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_baseline_filter_list_24"
            android:title="@string/menu_coategory" />
        <item
        android:id="@+id/laction_og_out"
        android:orderInCategory="100"
        android:title="@string/action_logout"
            android:icon="@drawable/ic_baseline_login_24"
        />

    </group>
</menu>