<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >


<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.sunnyschool.thingseller.ui.addproduct.AddProductDetalsFragment"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:id="@+id/select_product_image"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/select_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:id="@+id/add_product_detals_txt"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/product_text_layout"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_model1"
        app:hintTextColor="@color/appHighLightColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/product_name"
            style="@style/InputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="textEmailAddress"
            android:textColor="@color/inputTextColor"
            android:selectAllOnFocus="true"/>

    </com.google.android.material.textfield.TextInputLayout>

 <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_text_layout"
     android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:hintTextColor="@color/appHighLightColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/product_description"
            style="@style/InputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="textEmailAddress"
            android:textColor="@color/inputTextColor"
            android:selectAllOnFocus="true"/>

    </com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_text_layout"
     android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_price"
        app:hintTextColor="@color/appHighLightColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/product_price"
            style="@style/InputTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="textEmailAddress"
            android:textColor="@color/inputTextColor"
            android:selectAllOnFocus="true"/>

    </com.google.android.material.textfield.TextInputLayout>

<Spinner
    android:layout_marginTop="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/speener_add_product"
    />


    <Button
        android:id="@+id/add_new_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_price"
        android:text="Add Product"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:padding="17dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"

        />


</LinearLayout>
</androidx.core.widget.NestedScrollView>