<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.ProfileFragment"
    android:padding="20dp">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/close_settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Close"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                app:layout_constraintLeft_toLeftOf="parent"

                app:layout_constraintTop_toTopOf="parent"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_settings"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_username_vector"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/profile_image_change_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:text="Change Profile Image"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_image_settings" />

            <TextView
                android:id="@+id/username_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:text="username"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_image_change_btn" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_phone_text_layout"
                style="@style/InputLayoutStyle_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                app:hintTextColor="@color/appHighLightColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_settings">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/settings_phone_number"
                    style="@style/InputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:drawableEnd="@drawable/ic_baseline_call_24_green"
                    android:inputType="phone"
                    android:textColor="@color/inputTextColor"
                    android:selectAllOnFocus="true"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_username_text_layout"
                style="@style/InputLayoutStyle_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:hintTextColor="@color/appHighLightColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_phone_text_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:drawableEnd="@drawable/ic_username_vector"
                    android:id="@+id/settings_full_name"
                    style="@style/InputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textPersonName"
                    android:textColor="@color/inputTextColor"
                    android:selectAllOnFocus="true"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/email_text_layout_reg"
                style="@style/InputLayoutStyle_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                app:hintTextColor="@color/appHighLightColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_username_text_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:drawableEnd="@drawable/ic_baseline_alternate_email_24"
                    android:id="@+id/settings_address"
                    style="@style/InputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/inputTextColor"
                    android:selectAllOnFocus="true"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/update_account_settings_btn"
                style="@style/LoginButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:text="Update profile"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_text_layout_reg"/>



        </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>